finalizei a noticicao e criei o crud do artigo e documentei todos
